# superset-devin-remediation

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
data/: runs.sample.jsonl
docs/: ISSUES.md
orchestrator/: pyproject.toml
orchestrator/src/remediation/: __init__.py  cli.py  config.py  devin_client.py  github_client.py  http_utils.py  locks.py  main.py  metrics.py  orchestrator.py  prompts.py
reports/: dashboard.html
scripts/: create_issues.sh
scripts/issue-bodies/: 01-timetable-any.md  02-mcp-type-hints.md  03-dependency-review.md  04-bump-actions.md  05-demo-workflow-dispatch.md
